# mqtt-rubric-publisher

./: Cargo.toml  Containerfile  README.md
.github/workflows/: ci.yml
examples/: mapping.toml
src/: call.rs  main.rs  mapping.rs  rubric.rs
