[package]
name = "mqtt-rubric-publisher"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.1", features = ["derive", "env"] }
dapnet-api = "0.2"
env_logger = "0.9"
log = "0.4"
paho-mqtt = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
